# rouge

./: .gitignore  Cargo.toml  fragment_shader.wgsl  instanced_vertex_shader.wgsl  unlit-texture-fixed.wgsl  unlit-texture-graph-2.wgsl  unlit-texture-graph.wgsl  unlit-texture.wgsl  unlit.wgsl  vertex_shader.wgsl
crates/asset/: Cargo.toml
crates/asset/src/: asset.rs  cache.rs  config.rs  database.rs  import.rs  importer.rs  lib.rs  library.rs  plugin.rs
crates/asset/src/actions/: import.rs  mod.rs
crates/asset/src/database/: config.rs  events.rs  library.rs  mod.rs  registry.rs  state.rs  update.rs
crates/asset/src/database/events/: import.rs  load.rs  mod.rs
crates/asset/src/io/: cache.rs  embed.rs  embedded.rs  local.rs  mod.rs  source.rs  vfs.rs
crates/ecs/: Cargo.toml
crates/ecs/src/archetype/: mod.rs  table.rs
crates/ecs/src/core/: component.rs  entity.rs  mod.rs  resource.rs
crates/ecs/src/event/: mod.rs
crates/ecs/src/system/: mod.rs  observer.rs  schedule.rs  systems.rs
crates/ecs/src/task/: mod.rs
crates/ecs/src/world/: access.rs  action.rs  builtin.rs  cell.rs  mod.rs  query.rs  registry.rs  spawner.rs  statik.rs
crates/game/: Cargo.toml
crates/game/src/: app.rs  extract.rs  game.rs  lib.rs  phases.rs  plugin.rs
crates/graphics/: Cargo.toml
crates/graphics/src/: lib.rs  plugin.rs  surface.rs
crates/graphics/src/core/: asset.rs  camera.rs  color.rs  device.rs  draw.rs  export.rs  mod.rs  render_asset.rs
crates/graphics/src/plugin/: frameworks.rs  mod.rs  phases.rs
crates/graphics/src/renderer/: context.rs  graph.rs  mod.rs  pass.rs  resources.rs
crates/graphics/src/resource/: binding.rs  mod.rs  pipeline.rs  shader.rs
crates/graphics/src/resource/buffer/: array.rs  index.rs  mod.rs  storage.rs  uniform.rs  vertex.rs
crates/graphics/src/resource/material/: globals.rs  mod.rs  plugin.rs
crates/graphics/src/resource/mesh/: mod.rs
crates/graphics/src/resource/texture/: fallbacks.rs  format.rs  mod.rs  render.rs  sampler.rs  target.rs  texture1d.rs  texture2d.rs  texture3d.rs  texture_cube.rs
crates/graphics/src/resources/: binding.rs  buffer.rs  mod.rs  pipeline.rs  shader.rs
crates/graphics/src/resources/buffer/: array.rs  index.rs  mod.rs  storage.rs  uniform.rs  vertex.rs
crates/graphics/src/resources/mesh/: mod.rs
crates/graphics/src/resources/texture/: mod.rs  render.rs  sampler.rs  target.rs  texture2d.rs
crates/graphics/src/surface/: mod.rs  target.rs
crates/graphics3d/: Cargo.toml
crates/graphics3d/src/: camera.rs  lib.rs  plugin.rs
crates/macros/: Cargo.toml
crates/macros/asset/: Cargo.toml
crates/macros/encase/: Cargo.toml
crates/macros/graphics/: Cargo.toml
crates/macros/graphics/src/: lib.rs
crates/macros/src/: lib.rs  token.rs
crates/spatial/: Cargo.toml
crates/spatial/src/: bounds.rs  circle.rs  lib.rs  plugin.rs  point.rs  rect.rs  size.rs  sphere.rs  transform.rs
crates/window/: Cargo.toml
crates/window/src/: app.rs  events.rs  keyboard.rs  lib.rs  plugin.rs  window.rs  winit.rs
examples/basic/: Cargo.toml
examples/basic/examples/: basic.rs
examples/basic/examples/assets/: embedded.txt  fragment.wgsl  vertex.wgsl
examples/basic/src/: main.rs
rouge-asset/: Cargo.toml
rouge-asset/src/: actions.rs  config.rs  database.rs  error.rs  filesystem.rs  lib.rs  loader.rs  metadata.rs  pack.rs  pipeline.rs  plugin.rs  reflector.rs  storage.rs
rouge-asset/src/actions/: meta.rs  mod.rs  observers.rs
rouge-core/: Cargo.toml
rouge-core/src/: lib.rs  primitives.rs
rouge-ecs/: Cargo.toml
rouge-ecs/macros/: Cargo.toml
rouge-ecs/macros/src/: lib.rs
rouge-ecs/src/: lib.rs
rouge-ecs/src/archetype/: mod.rs
rouge-ecs/src/core/: allocator.rs  component.rs
rouge-ecs/src/schedule/: graph.rs  mod.rs  runner.rs
rouge-ecs/src/storage/: bits.rs  blob.rs  ptr.rs  sparse.rs
rouge-ecs/src/system/: mod.rs
rouge-ecs/src/tasks/: barrier.rs  mod.rs  process.rs
rouge-ecs/src/world/: meta.rs  mod.rs  resource.rs
rouge-editor/: Cargo.toml
rouge-editor/src/gui/: attributes.rs  context.rs  core.rs  event.rs  mod.rs
rouge-editor/src/gui/elements/: mod.rs  quad.rs
rouge-editor/src/gui/widgets/: mod.rs
rouge-game/: Cargo.toml
rouge-game/src/: lib.rs  main.rs
rouge-game/src/engine/: mod.rs
rouge-game/src/game/: mod.rs
rouge-game/src/plugin/: mod.rs
rouge-game/src/time/: mod.rs
rouge-graphics/: Cargo.toml
rouge-graphics/src/: lib.rs
rouge-graphics/src/core/: device.rs  draw.rs  mod.rs  surface.rs
rouge-graphics/src/core/ty/: color.rs  mod.rs
rouge-graphics/src/core/ty/shader/: attribute.rs  binding.rs  buffer.rs  field.rs  mod.rs
rouge-graphics/src/renderer/graph/: context.rs  mod.rs  resources.rs
rouge-graphics/src/renderer/graph/nodes/: compute.rs  mod.rs  present.rs  render.rs
rouge-graphics/src/resources/: bind_group.rs  buffer.rs  mod.rs  pipeline.rs  shader.rs  texture.rs
rouge-window/: Cargo.toml
rouge-window/src/: actions.rs  lib.rs  raw.rs  window.rs
rouge-winit/: Cargo.toml
rouge-winit/src/: lib.rs  map.rs  runner.rs  windows.rs
src/: main.rs
src/archetype/: mod.rs  table.rs
src/asset/: mod.rs
src/core/: bitset.rs  component.rs  entity.rs  mod.rs  registry.rs  resource.rs
src/core/internal/: blob.rs
src/ecs/: mod.rs
src/ecs/archetype/: mod.rs
src/ecs/builtin/: mod.rs
src/ecs/component/: manager.rs  mod.rs  registry.rs
src/ecs/entity/: mod.rs  registry.rs
src/ecs/hashid/: mod.rs
src/ecs/registry/: mod.rs
src/ecs/resource/: id.rs  manager.rs  mod.rs
src/ecs/state/: mod.rs
src/ecs/system/: mod.rs
src/ecs/world/: events.rs  mod.rs  query.rs
src/event/: mod.rs
src/game/: mod.rs  plugin.rs  scene.rs  schedule.rs  states.rs
src/graphics/: mod.rs
src/graphics/core/: device.rs  gpu.rs  mod.rs  (+2 more)
src/primitives/: bounds.rs  circle.rs  intersect.rs  mod.rs  object.rs  plane.rs  rect.rs  sphere.rs
src/system/: mod.rs  observer.rs  schedule.rs  systems.rs
src/tree/: mod.rs  octtree.rs  quadtree.rs
src/world/: access.rs  action.rs  builtin.rs  cell.rs  components.rs  id.rs  mod.rs  query.rs  registry.rs
(+53 files in other folders)
