[package]
name = "rouge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
wgpu = "0.18.0"
winit = "0.28.0"

[dependencies.bytemuck]
version = "1.14.0"
features = ["derive"]

[dependencies.glam]
version = "0.24.2"
features = ["bytemuck"]

[dependencies.uuid]
version = "1.5.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
