[package]
name = "rouge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
itertools = "0.12.0"
naga = "0.14.2"
pollster = "0.3.0"
toml = "0.8.8"
wgpu = "0.18.0"
winit = "0.28.0"


[dependencies.bytemuck]
version = "1.14.0"
features = ["derive"]

[dependencies.glam]
version = "0.24.2"
features = ["bytemuck"]

[dependencies.uuid]
version = "1.5.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]


[dependencies.serde]
version = "1.0.192"
features = ["derive"]

[dependencies.ulid]
version = "1.1.0"
features = ["serde"]
