[workspace]
members = ["examples/*", "crates/*"]

[workspace.dependencies]
crc32fast = "1.4.2"
downcast-rs = "1.2.1"
hashbrown = "0.15.0"
indexmap = "2.6.0"
rayon = "1.10.0"
threadpool = "1.8.1"
futures = "0.3.31"
serde = "1.0.203"
uuid = "1.10.0"
bincode = "1.3.3"
toml = "0.8.19"
thiserror = "1.0.64"
