[package]
name = "rouge-asset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ulid = "1.1.0"
rouge-ecs = { path = "../rouge-ecs", version = "0.1.0" }
bytemuck = "1.14.1"
toml = "0.8.8"

[dependencies.serde]
version = "1.0.196"
features = ["derive"]
