[package]
name = "rouge-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rouge-ecs = { path = "../rouge-ecs", version = "0.1.0" }
rouge-game = { path = "../rouge-game", version = "0.1.0" }
rouge-graphics = { path = "../rouge-graphics", version = "0.1.0" }
rouge-window = { path = "../rouge-window", version = "0.1.0" }
