[package]
name = "asset"
version = "0.1.0"
edition = "2021"

[dependencies]
ecs = { path = "../ecs" }
game = { path = "../game" }
futures = { workspace = true }
vfs = { version = "0.12.0", features = ["embedded-fs"] }
futures-io = "0.3.31"
async-std = "1.13.0"
notify-debouncer-full = "0.3.1"
stackfuture = "0.3.0"
ulid.workspace = true
serde.workspace = true
