[package]
name = "asset"
version = "0.1.0"
edition = "2021"

[dependencies]
ecs = { path = "../ecs" }
game = { path = "../game" }
futures = { workspace = true }
ron = { workspace = true }
crc32fast = { workspace = true }
downcast-rs = { workspace = true }
hashbrown = { workspace = true, features = ["serde"] }
bincode = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
serde = { workspace = true, features = ["derive"] }
futures-lite = "2.3.0"
async-std = "1.13.0"
notify-debouncer-full = "0.3.1"
notify = "6.1.1"
blake3 = "0.1.3"
