[package]
name = "ecs"
version = "0.1.0"
edition = "2021"

[dependencies]
crc32fast = { workspace = true }
downcast-rs = { workspace = true }
hashbrown = { workspace = true }
indexmap = { workspace = true }
rayon = { workspace = true }
threadpool = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["v4", "serde"] }
