[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

[dependencies]
ecs = { path = "../ecs" }
game = { path = "../game" }
asset = { path = "../asset" }
window = { path = "../window" }
spatial = { path = "../spatial" }
glam = { workspace = true, features = ["serde", "bytemuck"] }
bytemuck = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
crc32fast = { workspace = true }
downcast-rs = { workspace = true }
bitflags = { workspace = true }
pollster = { workspace = true }
wgpu = { version = "23.0.0", features = ["spirv", "glsl"] }
encase = { version = "0.10.0", features = ["glam"] }
