[package]
name = "basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { workspace = true }
ecs = { path = "../../crates/ecs" }
game = { path = "../../crates/game" }
asset = { path = "../../crates/asset" }
vfs = { version = "0.12.0", features = ["embedded-fs"] }
serde = { workspace = true, features = ["derive"] }
futures-lite = "2.3.0"
pollster = "=0.2.4"
